--- a/website/products.html
+++ b/website/products.html
@@ -2,74 +2,102 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Coasters | Bumble & Yarn</title>
+  <title>Shop – Bumble & Yarn</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header class="header">
-  <div class="logo-area">
+  <!-- HEADER -->
+  <header class="header">
     <img src="logo.jpg" alt="Bumble & Yarn Logo" class="logo">
     <h1>Bumble & Yarn</h1>
-  </div>
 
-  <nav class="nav">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li class="dropdown">
-        <a href="#">Shop ▾</a>
-        <ul class="dropdown-menu">
-          <li><a href="products.html">Coasters</a></li>
-        </ul>
-      </li>
-      <li><a href="index.html#about">About</a></li>
-    </ul>
-  </nav>
-</header>
+    <nav class="nav">
+      <a href="index.html">Home</a>
 
-<section class="section">
-  <h2>Matching Coasters</h2>
-
-  <div class="products">
-
-    <div class="product">
-      <img src="cactus coaster.jpg" alt="Cactus Coaster">
-      <h3>Cactus Coaster</h3>
-      <div class="product-options">
-        <select><option>Select Color</option></select>
-        <select><option>$8</option></select>
+      <div class="dropdown">
+        <button class="dropbtn">Shop ▾</button>
+        <div class="dropdown-content">
+          <a href="products.html">Coasters</a>
+        </div>
       </div>
-    </div>
 
-    <div class="product">
-      <img src="flower petal coaster.jpg" alt="Flower Petal Coaster">
-      <h3>Flower Petal Coaster</h3>
-      <div class="product-options">
-        <select><option>Select Color</option></select>
-        <select><option>$8</option></select>
+      <a href="index.html#about">About</a>
+    </nav>
+  </header>
+
+  <!-- PRODUCTS -->
+  <section class="section">
+    <h2 class="center">Matching Coasters</h2>
+
+    <div class="products">
+
+      <!-- CACTUS -->
+      <div class="product">
+        <img src="cactus coaster.jpg" alt="Cactus Coaster">
+        <h3>Cactus Coaster</h3>
+        <div class="controls">
+          <select>
+            <option>Select Color</option>
+            <option>Green</option>
+            <option>Brown</option>
+          </select>
+          <select>
+            <option>$8</option>
+          </select>
+        </div>
       </div>
-    </div>
 
-    <div class="product">
-      <img src="flurry coaster.jpg" alt="Flurry Coaster">
-      <h3>Flurry Coaster</h3>
-      <div class="product-options">
-        <select><option>Select Color</option></select>
-        <select><option>$8</option></select>
+      <!-- FLOWER -->
+      <div class="product">
+        <img src="flower petal coaster.jpg" alt="Flower Petal Coaster">
+        <h3>Flower Petal Coaster</h3>
+        <div class="controls">
+          <select>
+            <option>Select Color</option>
+            <option>Pink</option>
+            <option>Yellow</option>
+          </select>
+          <select>
+            <option>$8</option>
+          </select>
+        </div>
       </div>
-    </div>
 
-    <div class="product">
-      <img src="helm coaster.jpg" alt="Helm Coaster">
-      <h3>Helm Coaster</h3>
-      <div class="product-options">
-        <select><option>Select Color</option></select>
-        <select><option>$8</option></select>
+      <!-- FLURRY -->
+      <div class="product">
+        <img src="flurry coaster.jpg" alt="Flurry Coaster">
+        <h3>Flurry Coaster</h3>
+        <div class="controls">
+          <select>
+            <option>Select Color</option>
+            <option>Grey</option>
+            <option>Blue</option>
+          </select>
+          <select>
+            <option>$8</option>
+          </select>
+        </div>
       </div>
-    </div>
 
-  </div>
-</section>
+      <!-- HELM -->
+      <div class="product">
+        <img src="helm coaster.jpg" alt="Helm Coaster">
+        <h3>Helm Coaster</h3>
+        <div class="controls">
+          <select>
+            <option>Select Color</option>
+            <option>Blue</option>
+            <option>White</option>
+          </select>
+          <select>
+            <option>$8</option>
+          </select>
+        </div>
+      </div>
+
+    </div>
+  </section>
 
 </body>
 </html>
