--- a/website/index.html
+++ b/website/index.html
@@ -4,108 +4,40 @@
   <meta charset="UTF-8">
   <title>Bumble & Yarn</title>
   <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
-<!-- HEADER -->
 <header class="header">
-  <img src="logo.jpg" alt="Bumble & Yarn Logo" class="logo">
-  <h1>Bumble & Yarn</h1>
+  <div class="header-left">
+    <img src="logo.jpg" alt="Bumble & Yarn Logo" class="logo">
+    <span class="brand">Bumble & Yarn</span>
+  </div>
 
   <nav class="nav">
-    <a href="#home">Home</a>
-
     <div class="dropdown">
       <button class="dropbtn">Shop ▾</button>
       <div class="dropdown-content">
-        <a href="#coasters">Coasters</a>
+        <a href="products.html">Coasters</a>
       </div>
     </div>
-
     <a href="#about">About</a>
   </nav>
 </header>
 
-<!-- HOME -->
-<section id="home" class="section center">
-  <h2>Welcome to Bumble & Yarn</h2>
-  <p>Handmade crochet items made with love.</p>
-</section>
+<main class="section">
+  <h1 class="center">Welcome to Bumble & Yarn</h1>
+  <p class="center subtitle">
+    Bumble and Yarn is a crafty pair of mother and son with love for everything knitted and crocheted. :)
+  </p>
 
-<!-- COASTERS -->
-<section id="coasters" class="section">
-  <h2 class="center">Matching Coasters</h2>
-
-  <div class="products">
-
-    <div class="product">
-      <img src="cactus coaster.jpg" alt="Cactus Coaster">
-      <h3>Cactus Coaster</h3>
-      <div class="controls">
-        <select>
-          <option>Select Color</option>
-          <option>Green</option>
-          <option>Brown</option>
-        </select>
-        <select>
-          <option>$8</option>
-        </select>
-      </div>
-    </div>
-
-    <div class="product">
-      <img src="flower petal coaster.jpg" alt="Flower Petal Coaster">
-      <h3>Flower Petal Coaster</h3>
-      <div class="controls">
-        <select>
-          <option>Select Color</option>
-          <option>Pink</option>
-          <option>Yellow</option>
-        </select>
-        <select>
-          <option>$8</option>
-        </select>
-      </div>
-    </div>
-
-    <div class="product">
-      <img src="flurry coaster.jpg" alt="Flurry Coaster">
-      <h3>Flurry Coaster</h3>
-      <div class="controls">
-        <select>
-          <option>Select Color</option>
-          <option>Grey</option>
-          <option>Blue</option>
-        </select>
-        <select>
-          <option>$8</option>
-        </select>
-      </div>
-    </div>
-
-    <div class="product">
-      <img src="helm coaster.jpg" alt="Helm Coaster">
-      <h3>Helm Coaster</h3>
-      <div class="controls">
-        <select>
-          <option>Select Color</option>
-          <option>Blue</option>
-          <option>White</option>
-        </select>
-        <select>
-          <option>$8</option>
-        </select>
-      </div>
-    </div>
-
-  </div>
-</section>
-
-<!-- ABOUT -->
-<section id="about" class="section">
-  <h2>About Us</h2>
-  <p>Bumble & Yarn is a mother and son crochet duo creating handmade items with care.</p>
-</section>
+  <section id="about">
+    <h2 class="center">About Us</h2>
+    <p class="center subtitle">
+      Handmade crochet pieces created with care, creativity, and lots of yarn.
+    </p>
+  </section>
+</main>
 
 </body>
 </html>
