--- a/website/products.html
+++ b/website/products.html
@@ -2,102 +2,114 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Shop – Bumble & Yarn</title>
+  <title>Products | Bumble & Yarn</title>
   <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
-  <!-- HEADER -->
-  <header class="header">
+<header class="header">
+  <div class="header-left">
     <img src="logo.jpg" alt="Bumble & Yarn Logo" class="logo">
-    <h1>Bumble & Yarn</h1>
+    <span class="brand">Bumble & Yarn</span>
+  </div>
 
-    <nav class="nav">
-      <a href="index.html">Home</a>
-
-      <div class="dropdown">
-        <button class="dropbtn">Shop ▾</button>
-        <div class="dropdown-content">
-          <a href="products.html">Coasters</a>
-        </div>
+  <nav class="nav">
+    <div class="dropdown">
+      <button class="dropbtn">Shop ▾</button>
+      <div class="dropdown-content">
+        <a href="products.html">Coasters</a>
       </div>
-
-      <a href="index.html#about">About</a>
-    </nav>
-  </header>
-
-  <!-- PRODUCTS -->
-  <section class="section">
-    <h2 class="center">Matching Coasters</h2>
-
-    <div class="products">
-
-      <!-- CACTUS -->
-      <div class="product">
-        <img src="cactus coaster.jpg" alt="Cactus Coaster">
-        <h3>Cactus Coaster</h3>
-        <div class="controls">
-          <select>
-            <option>Select Color</option>
-            <option>Green</option>
-            <option>Brown</option>
-          </select>
-          <select>
-            <option>$8</option>
-          </select>
-        </div>
-      </div>
-
-      <!-- FLOWER -->
-      <div class="product">
-        <img src="flower petal coaster.jpg" alt="Flower Petal Coaster">
-        <h3>Flower Petal Coaster</h3>
-        <div class="controls">
-          <select>
-            <option>Select Color</option>
-            <option>Pink</option>
-            <option>Yellow</option>
-          </select>
-          <select>
-            <option>$8</option>
-          </select>
-        </div>
-      </div>
-
-      <!-- FLURRY -->
-      <div class="product">
-        <img src="flurry coaster.jpg" alt="Flurry Coaster">
-        <h3>Flurry Coaster</h3>
-        <div class="controls">
-          <select>
-            <option>Select Color</option>
-            <option>Grey</option>
-            <option>Blue</option>
-          </select>
-          <select>
-            <option>$8</option>
-          </select>
-        </div>
-      </div>
-
-      <!-- HELM -->
-      <div class="product">
-        <img src="helm coaster.jpg" alt="Helm Coaster">
-        <h3>Helm Coaster</h3>
-        <div class="controls">
-          <select>
-            <option>Select Color</option>
-            <option>Blue</option>
-            <option>White</option>
-          </select>
-          <select>
-            <option>$8</option>
-          </select>
-        </div>
-      </div>
-
     </div>
-  </section>
+    <a href="index.html">Home</a>
+  </nav>
+</header>
+
+<main class="section">
+  <h1 class="center">Matching Coasters and Place Mats</h1>
+  <p class="center subtitle">
+    We offer a selection of coasters for which we can provide matching place mats.
+  </p>
+
+  <div class="products">
+
+    <!-- FLURRY -->
+    <div class="product">
+      <img src="flurry coaster.jpg" alt="Flurry Coaster">
+      <h3>Flurry Coaster</h3>
+      <p class="desc">A cute simple puff-like coaster for your mugs.</p>
+
+      <select>
+        <option>Select price</option>
+        <option>£8</option>
+      </select>
+
+      <select>
+        <option>Select colour</option>
+        <option>Grey</option>
+        <option>Cream</option>
+        <option>Blue</option>
+      </select>
+
+      <button>Add to basket</button>
+    </div>
+
+    <!-- FLOWER -->
+    <div class="product">
+      <img src="flower petal coaster.jpg" alt="Flower Petal Coaster">
+      <h3>Flower Petal Coaster</h3>
+      <p class="desc">Special Flower Petal coasters made with love.</p>
+
+      <select>
+        <option>Select price</option>
+        <option>£8</option>
+      </select>
+
+      <select>
+        <option>Select colour</option>
+        <option>Pink</option>
+        <option>Yellow</option>
+        <option>Rainbow</option>
+      </select>
+
+      <button>Add to basket</button>
+    </div>
+
+    <!-- CACTUS -->
+    <div class="product">
+      <img src="cactus coaster.jpg" alt="Cactus Coaster">
+      <h3>The Cactus</h3>
+      <p class="desc">A fun cactus coaster set complete with pot.</p>
+
+      <select>
+        <option>£23 – Set of 2 (with pot)</option>
+      </select>
+
+      <button>Add to basket</button>
+    </div>
+
+    <!-- HELM (YES, INCLUDED) -->
+    <div class="product">
+      <img src="helm coaster.jpg" alt="Helm Coaster">
+      <h3>Helm Coaster</h3>
+      <p class="desc">Nautical-style crochet coasters inspired by ship helms.</p>
+
+      <select>
+        <option>Select price</option>
+        <option>£8</option>
+      </select>
+
+      <select>
+        <option>Select colour</option>
+        <option>Blue</option>
+        <option>White</option>
+      </select>
+
+      <button>Add to basket</button>
+    </div>
+
+  </div>
+</main>
 
 </body>
 </html>
