--- a/website/index.html
+++ b/website/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>Bumble & Yarn</title>
   <link rel="stylesheet" href="style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -15,25 +14,28 @@
   </div>
 
   <nav class="nav">
+    <a href="index.html">Home</a>
+
     <div class="dropdown">
       <button class="dropbtn">Shop ▾</button>
       <div class="dropdown-content">
         <a href="products.html">Coasters</a>
       </div>
     </div>
+
     <a href="#about">About</a>
   </nav>
 </header>
 
-<main class="section">
-  <h1 class="center">Welcome to Bumble & Yarn</h1>
-  <p class="center subtitle">
-    Bumble and Yarn is a crafty pair of mother and son with love for everything knitted and crocheted. :)
+<main class="home">
+  <h1>Welcome to Bumble & Yarn</h1>
+  <p class="subtitle">
+    Bumble & Yarn is a crafty pair of mother and son with love for everything knitted and crocheted.
   </p>
 
-  <section id="about">
-    <h2 class="center">About Us</h2>
-    <p class="center subtitle">
+  <section id="about" class="about">
+    <h2>About Us</h2>
+    <p>
       Handmade crochet pieces created with care, creativity, and lots of yarn.
     </p>
   </section>
@@ -41,4 +43,3 @@
 
 </body>
 </html>
-
