--- a/website/index.html
+++ b/website/index.html
@@ -8,12 +8,12 @@
 <body>
 
 <header class="header">
-  <div class="header-left">
-    <img src="logo.jpg" alt="Bumble & Yarn Logo" class="logo">
-    <span class="brand">Bumble & Yarn</span>
+  <div class="logo-area">
+    <img src="logo.jpg" alt="Bumble & Yarn Logo">
+    <span>Bumble & Yarn</span>
   </div>
 
-  <nav class="nav">
+  <nav>
     <a href="index.html">Home</a>
 
     <div class="dropdown">
@@ -23,22 +23,16 @@
       </div>
     </div>
 
-    <a href="#about">About</a>
+    <a href="#">About</a>
   </nav>
 </header>
 
 <main class="home">
   <h1>Welcome to Bumble & Yarn</h1>
-  <p class="subtitle">
-    Bumble & Yarn is a crafty pair of mother and son with love for everything knitted and crocheted.
-  </p>
+  <p>Bumble & Yarn is a crafty pair of mother and son with love for everything knitted and crocheted.</p>
 
-  <section id="about" class="about">
-    <h2>About Us</h2>
-    <p>
-      Handmade crochet pieces created with care, creativity, and lots of yarn.
-    </p>
-  </section>
+  <h2>About Us</h2>
+  <p>Handmade crochet pieces created with care, creativity, and lots of yarn.</p>
 </main>
 
 </body>
