--- a/website/products.html
+++ b/website/products.html
@@ -2,122 +2,76 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Products | Bumble & Yarn</title>
+  <title>Shop – Bumble & Yarn</title>
   <link rel="stylesheet" href="style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-
 <body>
 
-<!-- HEADER -->
 <header class="header">
-  <div class="header-inner">
-    <div class="logo-area">
-      <img src="logo.jpg" alt="Bumble & Yarn Logo" class="logo">
-      <h1>Bumble & Yarn</h1>
+  <div class="logo-area">
+    <img src="logo.jpg" alt="Bumble & Yarn Logo">
+    <span>Bumble & Yarn</span>
+  </div>
+
+  <nav>
+    <a href="index.html">Home</a>
+
+    <div class="dropdown">
+      <button class="dropbtn">Shop ▾</button>
+      <div class="dropdown-content">
+        <a href="products.html">Coasters</a>
+      </div>
     </div>
 
-    <nav class="nav">
-      <a href="index.html">Home</a>
-      <div class="dropdown">
-        <span>Shop ▾</span>
-        <div class="dropdown-content">
-          <a href="products.html">Coasters</a>
-        </div>
-      </div>
-      <a href="index.html#about">About</a>
-    </nav>
-  </div>
+    <a href="#">About</a>
+  </nav>
 </header>
 
-<!-- MAIN -->
-<main class="main">
+<main class="shop">
+  <h2>Matching Coasters and Place Mats</h2>
 
-  <h2 class="page-title">Matching Coasters and Place Mats</h2>
-  <p class="page-subtitle">
-    We offer a selection of coasters for which we can provide matching place mats.
-  </p>
+  <div class="product-grid">
 
-  <!-- PRODUCTS GRID -->
-  <section class="products-grid">
-
-    <!-- FLURRY -->
+    <!-- Flurry -->
     <div class="product-card">
-      <img src="flurry-coaster.jpg" alt="Flurry Coaster">
+      <img src="flurry coaster.jpg">
       <h3>Flurry Coaster</h3>
       <p>A cute simple puff-like coaster for your mugs.</p>
-
-      <select>
-        <option>Select price</option>
-        <option>£8</option>
-      </select>
-
-      <select>
-        <option>Select colour</option>
-        <option>Grey</option>
-        <option>Blue</option>
-        <option>Brown</option>
-      </select>
-
+      <select><option>Select price</option></select>
+      <select><option>Select colour</option></select>
       <button>Add to basket</button>
     </div>
 
-    <!-- FLOWER -->
+    <!-- Flower -->
     <div class="product-card">
-      <img src="flower-petal-coaster.jpg" alt="Flower Petal Coaster">
+      <img src="flower petal coaster.jpg">
       <h3>Flower Petal Coaster</h3>
-      <p>Special Flower Petal coasters made with love.</p>
-
-      <select>
-        <option>Select price</option>
-        <option>£8</option>
-      </select>
-
-      <select>
-        <option>Select colour</option>
-        <option>Pink</option>
-        <option>Yellow</option>
-        <option>Blue</option>
-      </select>
-
+      <p>Special flower petal coasters made with love.</p>
+      <select><option>Select price</option></select>
+      <select><option>Select colour</option></select>
       <button>Add to basket</button>
     </div>
 
-    <!-- CACTUS -->
+    <!-- Cactus -->
     <div class="product-card">
-      <img src="cactus-coaster.jpg" alt="Cactus Coaster">
+      <img src="cactus coaster.jpg">
       <h3>The Cactus</h3>
       <p>A fun cactus coaster set complete with pot.</p>
-
-      <select>
-        <option>£23 – Set of 2 (with pot)</option>
-      </select>
-
+      <select><option>£23 – Set of 2 (with pot)</option></select>
       <button>Add to basket</button>
     </div>
 
-    <!-- HELM -->
+    <!-- Helm -->
     <div class="product-card">
-      <img src="helm-coaster.jpg" alt="Helm Coaster">
+      <img src="helm coaster.jpg">
       <h3>Helm Coaster</h3>
       <p>Nautical-style crochet coasters inspired by ship helms.</p>
-
-      <select>
-        <option>Select price</option>
-        <option>£8</option>
-      </select>
-
-      <select>
-        <option>Select colour</option>
-        <option>Blue</option>
-        <option>Cream</option>
-      </select>
-
+      <select><option>Select price</option></select>
+      <select><option>Select colour</option></select>
       <button>Add to basket</button>
     </div>
 
-  </section>
-
+  </div>
 </main>
 
 </body>
