--- a/website/index.html
+++ b/website/index.html
@@ -7,32 +7,21 @@
 </head>
 <body>
 
-<header class="header">
-  <div class="logo-area">
-    <img src="logo.jpg" alt="Bumble & Yarn Logo">
-    <span>Bumble & Yarn</span>
-  </div>
-
-  <nav>
-    <a href="index.html">Home</a>
-
-    <div class="dropdown">
-      <button class="dropbtn">Shop ▾</button>
-      <div class="dropdown-content">
-        <a href="products.html">Coasters</a>
-      </div>
-    </div>
-
-    <a href="#">About</a>
-  </nav>
-</header>
+<header class="header">…same header as above…</header>
 
 <main class="home">
   <h1>Welcome to Bumble & Yarn</h1>
-  <p>Bumble & Yarn is a crafty pair of mother and son with love for everything knitted and crocheted.</p>
+  <p>
+    Bumble & Yarn is a crafty pair of mother and son with love for
+    everything knitted and crocheted.
+  </p>
 
-  <h2>About Us</h2>
-  <p>Handmade crochet pieces created with care, creativity, and lots of yarn.</p>
+  <section id="about">
+    <h2>About Us</h2>
+    <p>
+      Handmade crochet pieces created with care, creativity, and lots of yarn.
+    </p>
+  </section>
 </main>
 
 </body>
