--- a/website/products.html
+++ b/website/products.html
@@ -7,71 +7,92 @@
 </head>
 <body>
 
-<header class="header">
-  <div class="logo-area">
-    <img src="logo.jpg" alt="Bumble & Yarn Logo">
-    <span>Bumble & Yarn</span>
-  </div>
+<header class="header">…same header as above…</header>
 
-  <nav>
-    <a href="index.html">Home</a>
+<main>
+  <h1 class="page-title">Matching Coasters and Place Mats</h1>
 
-    <div class="dropdown">
-      <button class="dropbtn">Shop ▾</button>
-      <div class="dropdown-content">
-        <a href="products.html">Coasters</a>
-      </div>
-    </div>
-
-    <a href="#">About</a>
-  </nav>
-</header>
-
-<main class="shop">
-  <h2>Matching Coasters and Place Mats</h2>
-
-  <div class="product-grid">
+  <section class="products-grid">
 
     <!-- Flurry -->
     <div class="product-card">
-      <img src="flurry coaster.jpg">
+      <img src="flurry-coaster.jpg" alt="Flurry Coaster">
       <h3>Flurry Coaster</h3>
       <p>A cute simple puff-like coaster for your mugs.</p>
-      <select><option>Select price</option></select>
-      <select><option>Select colour</option></select>
+
+      <select>
+        <option disabled selected>Select price</option>
+        <option>£8 – Set of 2</option>
+        <option>£14 – Set of 4</option>
+      </select>
+
+      <select>
+        <option disabled selected>Select colour</option>
+        <option>Cream</option>
+        <option>Grey</option>
+        <option>Blue</option>
+      </select>
+
       <button>Add to basket</button>
     </div>
 
     <!-- Flower -->
     <div class="product-card">
-      <img src="flower petal coaster.jpg">
+      <img src="flower-petal-coaster.jpg" alt="Flower Petal Coaster">
       <h3>Flower Petal Coaster</h3>
       <p>Special flower petal coasters made with love.</p>
-      <select><option>Select price</option></select>
-      <select><option>Select colour</option></select>
+
+      <select>
+        <option disabled selected>Select price</option>
+        <option>£10 – Set of 2</option>
+        <option>£18 – Set of 4</option>
+      </select>
+
+      <select>
+        <option disabled selected>Select colour</option>
+        <option>Pink</option>
+        <option>Yellow</option>
+        <option>White</option>
+      </select>
+
       <button>Add to basket</button>
     </div>
 
     <!-- Cactus -->
     <div class="product-card">
-      <img src="cactus coaster.jpg">
+      <img src="cactus-coaster.jpg" alt="Cactus Coaster">
       <h3>The Cactus</h3>
       <p>A fun cactus coaster set complete with pot.</p>
-      <select><option>£23 – Set of 2 (with pot)</option></select>
+
+      <select>
+        <option>£23 – Set of 2 (with pot)</option>
+      </select>
+
       <button>Add to basket</button>
     </div>
 
     <!-- Helm -->
     <div class="product-card">
-      <img src="helm coaster.jpg">
+      <img src="helm-coaster.jpg" alt="Helm Coaster">
       <h3>Helm Coaster</h3>
       <p>Nautical-style crochet coasters inspired by ship helms.</p>
-      <select><option>Select price</option></select>
-      <select><option>Select colour</option></select>
+
+      <select>
+        <option disabled selected>Select price</option>
+        <option>£9 – Set of 2</option>
+        <option>£16 – Set of 4</option>
+      </select>
+
+      <select>
+        <option disabled selected>Select colour</option>
+        <option>Blue</option>
+        <option>Cream</option>
+      </select>
+
       <button>Add to basket</button>
     </div>
 
-  </div>
+  </section>
 </main>
 
 </body>
