--- a/website/products.html
+++ b/website/products.html
@@ -7,10 +7,11 @@
 </head>
 <body>
 
+<!-- HEADER (same structure as index.html) -->
 <header class="header">
   <div class="logo-area">
     <img src="logo.jpg" alt="Bumble & Yarn logo">
-    <span>Bumble & Yarn</span>
+    <strong>Bumble & Yarn</strong>
   </div>
 
   <nav>
@@ -23,48 +24,102 @@
       </div>
     </div>
 
-    <a href="index.html#about">About</a>
+    <a href="#">About</a>
   </nav>
 </header>
 
 <main>
   <h1>Matching Coasters and Place Mats</h1>
 
-  <div class="products">
+  <section class="products-grid">
 
+    <!-- PRODUCT 1 -->
     <div class="product-card">
       <img src="flurry coaster.jpg" alt="Flurry Coaster">
       <h3>Flurry Coaster</h3>
-      <p>£5 each</p>
-      <p>Colours: White, Grey, Blue</p>
+      <p>A cute puff-like coaster for your mugs.</p>
+
+      <select>
+        <option>Select price</option>
+        <option>£6 – Single</option>
+        <option>£20 – Set of 4</option>
+      </select>
+
+      <select>
+        <option>Select colour</option>
+        <option>Cream</option>
+        <option>Blue</option>
+        <option>Rust</option>
+      </select>
+
       <button>Add to basket</button>
     </div>
 
+    <!-- PRODUCT 2 -->
     <div class="product-card">
       <img src="flower petal coaster.jpg" alt="Flower Petal Coaster">
       <h3>Flower Petal Coaster</h3>
-      <p>£6 each</p>
-      <p>Colours: Pink, Yellow, Purple</p>
+      <p>Soft flower petal design, handmade with love.</p>
+
+      <select>
+        <option>Select price</option>
+        <option>£7 – Single</option>
+        <option>£24 – Set of 4</option>
+      </select>
+
+      <select>
+        <option>Select colour</option>
+        <option>Pink</option>
+        <option>Yellow</option>
+        <option>White</option>
+      </select>
+
       <button>Add to basket</button>
     </div>
 
+    <!-- PRODUCT 3 -->
     <div class="product-card">
       <img src="cactus coaster.jpg" alt="Cactus Coaster">
       <h3>The Cactus</h3>
-      <p>£23 – Set of 2 (with pot)</p>
-      <p>Colours: Green</p>
+      <p>A fun cactus coaster set complete with pot.</p>
+
+      <select>
+        <option>Select price</option>
+        <option>£23 – Set of 2 (with pot)</option>
+      </select>
+
+      <select>
+        <option>Select colour</option>
+        <option>Green</option>
+        <option>Dark Green</option>
+      </select>
+
       <button>Add to basket</button>
     </div>
 
+    <!-- PRODUCT 4 -->
     <div class="product-card">
       <img src="helm coaster.jpg" alt="Helm Coaster">
       <h3>Helm Coaster</h3>
-      <p>£5 each</p>
-      <p>Colours: Blue, Navy, Cream</p>
+      <p>Nautical-style crochet coasters inspired by ship helms.</p>
+
+      <select>
+        <option>Select price</option>
+        <option>£6 – Single</option>
+        <option>£20 – Set of 4</option>
+      </select>
+
+      <select>
+        <option>Select colour</option>
+        <option>Navy</option>
+        <option>Light Blue</option>
+        <option>White</option>
+      </select>
+
       <button>Add to basket</button>
     </div>
 
-  </div>
+  </section>
 </main>
 
 </body>
