--- a/website/products.html
+++ b/website/products.html
@@ -7,126 +7,156 @@
 </head>
 <body>
 
-  <!-- ===== HEADER ===== -->
-  <header class="header">
-    <div class="logo-area">
-      <img src="logo.jpg" alt="Bumble & Yarn Logo">
-      <strong>Bumble & Yarn</strong>
+<header class="header">
+  <div class="logo-area">
+    <img src="logo.jpg" alt="Bumble & Yarn logo">
+    <strong>Bumble & Yarn</strong>
+  </div>
+
+  <nav>
+    <a href="index.html">Home</a>
+
+    <div class="dropdown">
+      <button class="dropbtn">Shop ▾</button>
+      <div class="dropdown-content">
+        <a href="products.html">Coasters</a>
+      </div>
     </div>
 
-    <nav>
-      <a href="index.html">Home</a>
+    <a href="#">About</a>
+  </nav>
+</header>
 
-      <div class="dropdown">
-        <button class="dropbtn">Shop ▾</button>
-        <div class="dropdown-content">
-          <a href="products.html">Coasters</a>
-        </div>
-      </div>
+<main>
+  <h1>Matching Coasters and Place Mats</h1>
 
-      <a href="#">About</a>
-    </nav>
-  </header>
+  <section class="products-grid">
 
-  <!-- ===== PRODUCTS ===== -->
-  <main>
-    <h1>Matching Coasters and Place Mats</h1>
+    <!-- FLURRY COASTER -->
+    <div class="product-card">
+      <img src="flurry coaster.jpg" alt="Flurry Coaster">
+      <h3>Flurry Coaster</h3>
+      <p>A cute puff-like coaster for your mugs.</p>
 
-    <div class="products-grid">
+      <select>
+        <option selected disabled>Select price</option>
+        <option>£7.20 – Set of 2</option>
+        <option>£14.40 – Set of 4</option>
+        <option>£21.60 – Set of 6</option>
+        <option>£28.80 – Set of 8</option>
+        <option>£36.00 – Set of 10</option>
+        <option>£43.20 – Set of 12</option>
+      </select>
 
-      <!-- Flurry Coaster -->
-      <div class="product-card">
-        <img src="flurry coaster.jpg" alt="Flurry Coaster">
-        <h3>Flurry Coaster</h3>
-        <p>A cute puff-like coaster for your mugs.</p>
+      <select>
+        <option selected disabled>Select colour</option>
+        <option>Red</option>
+        <option>Blue</option>
+        <option>White</option>
+        <option>Black</option>
+        <option>Green</option>
+        <option>Orange</option>
+        <option>Purple</option>
+        <option>Pink</option>
+        <option>Yellow</option>
+        <option>Brown</option>
+        <option>Grey</option>
+      </select>
 
-        <select>
-          <option>Select price</option>
-          <option>£6 – Single</option>
-          <option>£10 – Set of 2</option>
-          <option>£18 – Set of 4</option>
-        </select>
-
-        <select>
-          <option>Select colour</option>
-          <option>Cream</option>
-          <option>Blue</option>
-          <option>Rust</option>
-          <option>Grey</option>
-        </select>
-
-        <button>Add to basket</button>
-      </div>
-
-      <!-- Flower Petal Coaster -->
-      <div class="product-card">
-        <img src="flower petal coaster.jpg" alt="Flower Petal Coaster">
-        <h3>Flower Petal Coaster</h3>
-        <p>Soft flower petal design, handmade with love.</p>
-
-        <select>
-          <option>Select price</option>
-          <option>£7 – Single</option>
-          <option>£12 – Set of 2</option>
-          <option>£22 – Set of 4</option>
-        </select>
-
-        <select>
-          <option>Select colour</option>
-          <option>Pink</option>
-          <option>Yellow</option>
-          <option>White</option>
-          <option>Mixed colours</option>
-        </select>
-
-        <button>Add to basket</button>
-      </div>
-
-      <!-- Cactus Coaster -->
-      <div class="product-card">
-        <img src="cactus coaster.jpg" alt="Cactus Coaster">
-        <h3>The Cactus</h3>
-        <p>A fun cactus coaster set complete with pot.</p>
-
-        <select>
-          <option>£23 – Set of 2 (with pot)</option>
-        </select>
-
-        <select>
-          <option>Select colour</option>
-          <option>Green cactus + brown pot</option>
-          <option>Green cactus + cream pot</option>
-        </select>
-
-        <button>Add to basket</button>
-      </div>
-
-      <!-- Helm Coaster -->
-      <div class="product-card">
-        <img src="helm coaster.jpg" alt="Helm Coaster">
-        <h3>Helm Coaster</h3>
-        <p>Nautical-style crochet coasters inspired by ship helms.</p>
-
-        <select>
-          <option>Select price</option>
-          <option>£8 – Single</option>
-          <option>£14 – Set of 2</option>
-          <option>£26 – Set of 4</option>
-        </select>
-
-        <select>
-          <option>Select colour</option>
-          <option>Navy</option>
-          <option>Light blue</option>
-          <option>White</option>
-          <option>Navy & white</option>
-        </select>
-
-        <button>Add to basket</button>
-      </div>
-
+      <button>Add to basket</button>
     </div>
-  </main>
+
+    <!-- FLOWER PETAL COASTER -->
+    <div class="product-card">
+      <img src="flower petal coaster.jpg" alt="Flower Petal Coaster">
+      <h3>Flower Petal Coaster</h3>
+      <p>Special flower petal coasters made with love.</p>
+
+      <select>
+        <option selected disabled>Select price</option>
+        <option>£7.20 – Set of 2</option>
+        <option>£14.40 – Set of 4</option>
+        <option>£21.60 – Set of 6</option>
+        <option>£28.80 – Set of 8</option>
+        <option>£36.00 – Set of 10</option>
+        <option>£43.20 – Set of 12</option>
+      </select>
+
+      <select>
+        <option selected disabled>Select colour</option>
+        <option>Red</option>
+        <option>Blue</option>
+        <option>White</option>
+        <option>Black</option>
+        <option>Green</option>
+        <option>Orange</option>
+        <option>Purple</option>
+        <option>Pink</option>
+        <option>Yellow</option>
+        <option>Brown</option>
+        <option>Grey</option>
+      </select>
+
+      <button>Add to basket</button>
+    </div>
+
+    <!-- CACTUS COASTER -->
+    <div class="product-card">
+      <img src="cactus coaster.jpg" alt="Cactus Coaster">
+      <h3>The Cactus</h3>
+      <p>A fun cactus coaster set complete with pot.</p>
+
+      <select>
+        <option selected disabled>Select price</option>
+        <option>£8 – Set of 2 (without pot)</option>
+        <option>£23 – Set of 2 (with pot)</option>
+        <option>£16 – Set of 4 (without pot)</option>
+        <option>£31 – Set of 4 (with pot)</option>
+        <option>£24 – Set of 6 (without pot)</option>
+        <option>£39 – Set of 6 (with pot)</option>
+        <option>£32 – Set of 8 (without pot)</option>
+        <option>£47 – Set of 8 (with pot)</option>
+      </select>
+
+      <button>Add to basket</button>
+    </div>
+
+    <!-- HELM COASTER -->
+    <div class="product-card">
+      <img src="helm coaster.jpg" alt="Helm Coaster">
+      <h3>Helm Coaster</h3>
+      <p>This masterpiece is made to represent the helm of a pirate ship.</p>
+
+      <select>
+        <option selected disabled>Select price</option>
+        <option>£7.20 – Set of 2</option>
+        <option>£14.40 – Set of 4</option>
+        <option>£21.60 – Set of 6</option>
+        <option>£28.80 – Set of 8</option>
+        <option>£36.00 – Set of 10</option>
+        <option>£43.20 – Set of 12</option>
+      </select>
+
+      <select>
+        <option selected disabled>Select colour</option>
+        <option>Red</option>
+        <option>Blue</option>
+        <option>White</option>
+        <option>Black</option>
+        <option>Green</option>
+        <option>Orange</option>
+        <option>Purple</option>
+        <option>Pink</option>
+        <option>Yellow</option>
+        <option>Brown</option>
+        <option>Grey</option>
+      </select>
+
+      <button>Add to basket</button>
+    </div>
+
+  </section>
+</main>
 
 </body>
 </html>
