--- a/website/index.html
+++ b/website/index.html
@@ -8,37 +8,33 @@
 <body>
 
 <header class="header">
-  <div class="logo-area">
-    <img src="logo.jpg" alt="Bumble & Yarn logo">
-    <span>Bumble & Yarn</span>
-  </div>
+  <img src="logo.jpg" alt="Bumble & Yarn Logo" class="logo">
+  <h1>Bumble & Yarn</h1>
 
-  <nav>
+  <nav class="nav">
     <a href="index.html">Home</a>
 
     <div class="dropdown">
-      <button class="dropbtn">Shop ▾</button>
+      <button class="dropbtn">Shop</button>
       <div class="dropdown-content">
         <a href="products.html">Coasters</a>
       </div>
     </div>
 
-    <a href="#about">About</a>
+    <a href="#">About</a>
   </nav>
 </header>
 
 <main class="home">
-  <h1>Welcome to Bumble & Yarn</h1>
-  <p>
-    Bumble & Yarn is a crafty mother-and-son duo who love everything knitted
-    and crocheted.
-  </p>
-
-  <h2 id="about">About Us</h2>
-  <p>
-    Handmade crochet pieces created with care, creativity, and lots of yarn.
-  </p>
+  <h2>Welcome to Bumble & Yarn</h2>
+  <p>Handmade crochet coasters made with love.</p>
 </main>
+
+<!-- Floating Basket -->
+<div class="basket-float">
+  🛒
+  <span class="basket-count">0</span>
+</div>
 
 </body>
 </html>
