--- a/website/products.html
+++ b/website/products.html
@@ -8,16 +8,14 @@
 <body>
 
 <header class="header">
-  <div class="logo-area">
-    <img src="logo.jpg" alt="Bumble & Yarn logo">
-    <strong>Bumble & Yarn</strong>
-  </div>
+  <img src="logo.jpg" alt="Bumble & Yarn Logo" class="logo">
+  <h1>Bumble & Yarn</h1>
 
-  <nav>
+  <nav class="nav">
     <a href="index.html">Home</a>
 
     <div class="dropdown">
-      <button class="dropbtn">Shop ▾</button>
+      <button class="dropbtn">Shop</button>
       <div class="dropdown-content">
         <a href="products.html">Coasters</a>
       </div>
@@ -27,136 +25,87 @@
   </nav>
 </header>
 
-<main>
-  <h1>Matching Coasters and Place Mats</h1>
+<main class="products">
 
-  <section class="products-grid">
+  <div class="product-grid">
 
-    <!-- FLURRY COASTER -->
-    <div class="product-card">
-      <img src="flurry coaster.jpg" alt="Flurry Coaster">
+    <!-- Flurry Coaster -->
+    <div class="product">
+      <img src="flurry coaster.jpg">
       <h3>Flurry Coaster</h3>
-      <p>A cute puff-like coaster for your mugs.</p>
 
       <select>
-        <option selected disabled>Select price</option>
-        <option>£7.20 – Set of 2</option>
-        <option>£14.40 – Set of 4</option>
-        <option>£21.60 – Set of 6</option>
-        <option>£28.80 – Set of 8</option>
-        <option>£36.00 – Set of 10</option>
-        <option>£43.20 – Set of 12</option>
-      </select>
-
-      <select>
-        <option selected disabled>Select colour</option>
-        <option>Red</option>
-        <option>Blue</option>
+        <option>Select Color</option>
         <option>White</option>
-        <option>Black</option>
-        <option>Green</option>
-        <option>Orange</option>
-        <option>Purple</option>
+        <option>Blue</option>
         <option>Pink</option>
-        <option>Yellow</option>
-        <option>Brown</option>
-        <option>Grey</option>
       </select>
 
-      <button>Add to basket</button>
+      <select>
+        <option>Select Price</option>
+        <option>$4 – Single</option>
+        <option>$12 – Set of 4</option>
+      </select>
     </div>
 
-    <!-- FLOWER PETAL COASTER -->
-    <div class="product-card">
-      <img src="flower petal coaster.jpg" alt="Flower Petal Coaster">
+    <!-- Flower Petal Coaster -->
+    <div class="product">
+      <img src="flower petal coaster.jpg">
       <h3>Flower Petal Coaster</h3>
-      <p>Special flower petal coasters made with love.</p>
 
       <select>
-        <option selected disabled>Select price</option>
-        <option>£7.20 – Set of 2</option>
-        <option>£14.40 – Set of 4</option>
-        <option>£21.60 – Set of 6</option>
-        <option>£28.80 – Set of 8</option>
-        <option>£36.00 – Set of 10</option>
-        <option>£43.20 – Set of 12</option>
-      </select>
-
-      <select>
-        <option selected disabled>Select colour</option>
-        <option>Red</option>
-        <option>Blue</option>
-        <option>White</option>
-        <option>Black</option>
-        <option>Green</option>
-        <option>Orange</option>
-        <option>Purple</option>
+        <option>Select Color</option>
         <option>Pink</option>
         <option>Yellow</option>
-        <option>Brown</option>
-        <option>Grey</option>
+        <option>White</option>
       </select>
-
-      <button>Add to basket</button>
-    </div>
-
-    <!-- CACTUS COASTER -->
-    <div class="product-card">
-      <img src="cactus coaster.jpg" alt="Cactus Coaster">
-      <h3>The Cactus</h3>
-      <p>A fun cactus coaster set complete with pot.</p>
 
       <select>
-        <option selected disabled>Select price</option>
-        <option>£8 – Set of 2 (without pot)</option>
-        <option>£23 – Set of 2 (with pot)</option>
-        <option>£16 – Set of 4 (without pot)</option>
-        <option>£31 – Set of 4 (with pot)</option>
-        <option>£24 – Set of 6 (without pot)</option>
-        <option>£39 – Set of 6 (with pot)</option>
-        <option>£32 – Set of 8 (without pot)</option>
-        <option>£47 – Set of 8 (with pot)</option>
+        <option>Select Price</option>
+        <option>$5 – Single</option>
+        <option>$18 – Set of 4</option>
       </select>
-
-      <button>Add to basket</button>
     </div>
 
-    <!-- HELM COASTER -->
-    <div class="product-card">
-      <img src="helm coaster.jpg" alt="Helm Coaster">
+    <!-- Helm Coaster -->
+    <div class="product">
+      <img src="helm coaster.jpg">
       <h3>Helm Coaster</h3>
-      <p>This masterpiece is made to represent the helm of a pirate ship.</p>
 
       <select>
-        <option selected disabled>Select price</option>
-        <option>£7.20 – Set of 2</option>
-        <option>£14.40 – Set of 4</option>
-        <option>£21.60 – Set of 6</option>
-        <option>£28.80 – Set of 8</option>
-        <option>£36.00 – Set of 10</option>
-        <option>£43.20 – Set of 12</option>
-      </select>
-
-      <select>
-        <option selected disabled>Select colour</option>
-        <option>Red</option>
-        <option>Blue</option>
-        <option>White</option>
-        <option>Black</option>
-        <option>Green</option>
-        <option>Orange</option>
-        <option>Purple</option>
-        <option>Pink</option>
-        <option>Yellow</option>
+        <option>Select Color</option>
         <option>Brown</option>
-        <option>Grey</option>
+        <option>Cream</option>
+        <option>Gray</option>
       </select>
 
-      <button>Add to basket</button>
+      <select>
+        <option>Select Price</option>
+        <option>$6 – Single</option>
+        <option>$20 – Set of 4</option>
+      </select>
     </div>
 
-  </section>
+    <!-- Cactus Coaster -->
+    <div class="product">
+      <img src="cactus coaster.jpg">
+      <h3>Cactus Coaster</h3>
+
+      <select>
+        <option>Select Price</option>
+        <option>$6 – Single</option>
+        <option>$22 – Set of 4</option>
+      </select>
+    </div>
+
+  </div>
 </main>
+
+<!-- Floating Basket -->
+<div class="basket-float">
+  🛒
+  <span class="basket-count">0</span>
+</div>
 
 </body>
 </html>
