--- a/website/products.html
+++ b/website/products.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Shop – Bumble & Yarn</title>
+  <title>Products – Bumble & Yarn</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -28,87 +28,126 @@
 <main class="products">
   <div class="product-grid">
 
-    <!-- FLURRY -->
+    <!-- FLURRY COASTER -->
     <div class="product">
       <img src="flurry coaster.jpg">
       <h3>Flurry Coaster</h3>
+      <p>A cute simple Puff-like coaster for you to put your mugs on.</p>
 
       <select>
-        <option>Select Color</option>
-        <option>White</option>
+        <option selected disabled>Select colour</option>
+        <option>Red</option>
         <option>Blue</option>
-        <option>Pink</option>
-      </select>
-
-      <select>
-        <option>Select Price</option>
-        <option>£4 Single</option>
-        <option>£14 Set of 4</option>
-      </select>
-
-      <button class="add-btn" onclick="addToBasket()">Add to Basket</button>
-    </div>
-
-    <!-- FLOWER PETAL -->
-    <div class="product">
-      <img src="flower petal coaster.jpg">
-      <h3>Flower Petal Coaster</h3>
-
-      <select>
-        <option>Select Color</option>
+        <option>White</option>
+        <option>Black</option>
+        <option>Green</option>
+        <option>Orange</option>
+        <option>Purple</option>
         <option>Pink</option>
         <option>Yellow</option>
-        <option>White</option>
-      </select>
-
-      <select>
-        <option>Select Price</option>
-        <option>£5 Single</option>
-        <option>£18 Set of 4</option>
-      </select>
-
-      <button class="add-btn" onclick="addToBasket()">Add to Basket</button>
-    </div>
-
-    <!-- HELM -->
-    <div class="product">
-      <img src="helm coaster.jpg">
-      <h3>Helm Coaster</h3>
-
-      <select>
-        <option>Select Color</option>
         <option>Brown</option>
-        <option>Cream</option>
         <option>Grey</option>
       </select>
 
       <select>
-        <option>Select Price</option>
-        <option>£6 Single</option>
-        <option>£20 Set of 4</option>
+        <option selected disabled>Select price</option>
+        <option>£7.20 – Set of 2</option>
+        <option>£14.40 – Set of 4</option>
+        <option>£21.60 – Set of 6</option>
+        <option>£28.80 – Set of 8</option>
+        <option>£36.00 – Set of 10</option>
+        <option>£43.20 – Set of 12</option>
       </select>
 
-      <button class="add-btn" onclick="addToBasket()">Add to Basket</button>
+      <button class="add-btn" onclick="addToBasket()">Add to basket</button>
+    </div>
+
+    <!-- FLOWER PETAL COASTER -->
+    <div class="product">
+      <img src="flower petal coaster.jpg">
+      <h3>Flower Petal Coaster</h3>
+      <p>Special Flower Petal coasters made with love.</p>
+
+      <select>
+        <option selected disabled>Select colour</option>
+        <option>Red</option>
+        <option>Blue</option>
+        <option>White</option>
+        <option>Black</option>
+        <option>Green</option>
+        <option>Orange</option>
+        <option>Purple</option>
+        <option>Pink</option>
+        <option>Yellow</option>
+        <option>Brown</option>
+        <option>Grey</option>
+      </select>
+
+      <select>
+        <option selected disabled>Select price</option>
+        <option>£7.20 – Set of 2</option>
+        <option>£14.40 – Set of 4</option>
+        <option>£21.60 – Set of 6</option>
+        <option>£28.80 – Set of 8</option>
+        <option>£36.00 – Set of 10</option>
+        <option>£43.20 – Set of 12</option>
+      </select>
+
+      <button class="add-btn" onclick="addToBasket()">Add to basket</button>
+    </div>
+
+    <!-- HELM COASTER -->
+    <div class="product">
+      <img src="helm coaster.jpg">
+      <h3>Helm Coaster</h3>
+      <p>This masterpiece is made to represent the Helm of a pirate ship.</p>
+
+      <select>
+        <option selected disabled>Select colour</option>
+        <option>Red</option>
+        <option>Blue</option>
+        <option>White</option>
+        <option>Black</option>
+        <option>Green</option>
+        <option>Orange</option>
+        <option>Purple</option>
+        <option>Pink</option>
+        <option>Yellow</option>
+        <option>Brown</option>
+        <option>Grey</option>
+      </select>
+
+      <select>
+        <option selected disabled>Select price</option>
+        <option>£7.20 – Set of 2</option>
+        <option>£14.40 – Set of 4</option>
+        <option>£21.60 – Set of 6</option>
+        <option>£28.80 – Set of 8</option>
+        <option>£36.00 – Set of 10</option>
+        <option>£43.20 – Set of 12</option>
+      </select>
+
+      <button class="add-btn" onclick="addToBasket()">Add to basket</button>
     </div>
 
     <!-- CACTUS -->
     <div class="product">
       <img src="cactus coaster.jpg">
-      <h3>Cactus Coaster</h3>
+      <h3>The Cactus</h3>
 
       <select>
-        <option>Select Price</option>
-        <option>£8 Set of 2 (no pot)</option>
-        <option>£23 Set of 2 (with pot)</option>
-        <option>£16 Set of 4 (no pot)</option>
-        <option>£31 Set of 4 (with pot)</option>
-        <option>£24 Set of 6 (no pot)</option>
-        <option>£39 Set of 6 (with pot)</option>
-        <option>£32 Set of 8 (no pot)</option>
-        <option>£47 Set of 8 (with pot)</option>
+        <option selected disabled>Select price</option>
+        <option>£8 – Set of 2 (without pot)</option>
+        <option>£23 – Set of 2 (with pot)</option>
+        <option>£16 – Set of 4 (without pot)</option>
+        <option>£31 – Set of 4 (with pot)</option>
+        <option>£24 – Set of 6 (without pot)</option>
+        <option>£39 – Set of 6 (with pot)</option>
+        <option>£32 – Set of 8 (without pot)</option>
+        <option>£47 – Set of 8 (with pot)</option>
       </select>
 
-      <button class="add-btn" onclick="addToBasket()">Add to Basket</button>
+      <button class="add-btn" onclick="addToBasket()">Add to basket</button>
     </div>
 
   </div>
@@ -122,7 +161,6 @@
 
 <script>
 let basketCount = 0;
-
 function addToBasket() {
   basketCount++;
   document.getElementById("basketCount").innerText = basketCount;
