--- a/website/basket.html
+++ b/website/basket.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Your Basket – Bumble & Yarn</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<header class="header">
+  <img src="logo.jpg" class="logo">
+  <h1>Bumble & Yarn</h1>
+
+  <nav class="nav">
+    <a href="index.html">Home</a>
+    <a href="products.html">Shop</a>
+  </nav>
+</header>
+
+<main class="basket-page">
+  <h2>Your Basket</h2>
+
+  <p class="basket-note">
+    Items you add will appear here in a future update.
+  </p>
+
+  <div class="basket-box">
+    <p>🧺 Your basket is currently empty.</p>
+  </div>
+
+  <a href="products.html" class="continue-btn">← Continue Shopping</a>
+</main>
+
+</body>
+</html>
 
